# ml-switching-reg-sim

./: .clinerules  .gitignore  AGENTS.md  CLAUDE.md  OPTIMIZATIONS.md  README.md  THEORY_PLAN.md  THEORY_VERIFICATION_INSIGHTS.md  analytical_mat copy.ipynb  analytical_mat.ipynb  analytical_mat_old.ipynb  monte_carlo_generate_data.ipynb  pyproject.toml  simulations.ipynb
.claude/agents/: paper-adversarial-reviewer.md  replication-package-curator.md
.cline/: econometric-theorist.md
.opencode/agents/: paper-adversarial-reviewer.md  replication-package-curator.md
ai-plans/: CONFOUNDING.md  INSIGHTS.md  OBSERVATION_DRIVER_FIX.md  VERIFICATION_PLAN.md
docs/: codebraid_compile.sh  estimator_presentation.cbmd  template.tex
examples/: classifier_comparison.py  comprehensive_verification.py  irls_vs_mle_comparison.py  misclassification_monte_carlo.py  ml-switching-reg-sim.code-workspace  mle_comparison.ipynb  monte_carlo_coverage.py  monte_carlo_generate_data.py  montecarlo_visualizations.ipynb  multi_regime_analysis.py  quick_test.py  run_r10_coverage_batch.py  theory_derivations.py  verify_theory_simulations.py
literature/: README.md
ml_switching_reg_sim/: classifier.py  data_creation.py  monte_carlo.py  utils.py  visualization.py
paper-writer/: CLAUDE.md  PAPER_ROADMAP.md  analysis_requests.md
paper-writer/draft/: formatting_report.md  paper.qmd  paper.tex  paper_draft_v1.md  paper_draft_v2.md  references.bib
paper-writer/literature/: literature_review.md
paper-writer/outline/: paper_outline.md  results_summary.md
paper-writer/review/: referee_report.md  (+2 more)
(+27 files in other folders)
