[tool.poetry]
name = "ml-switching-reg-sim"
version = "0.1.0"
description = ""
authors = ["Aleksandr Michuda <am2497@cornell.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_switching_reg_sim"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
statsmodels = "^0.13.2"
linearmodels = "^4.26"
tqdm = "^4.56.0"
scipy = "^1.8.0"
matplotlib = "^3.4.3"
seaborn = "^0.13.0"
plotly = "^5.18.0"
ml-switching-reg = "^0.4.14"
ipywidgets = "^8.1.1"
ipykernel = "^6.27.1"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
