[project]
name = "ml-switching-reg-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "linearmodels>=7.0",
    "marimo>=0.22.4",
    "matplotlib>=3.7.0",
    "ml-switching-reg",
    "mockseries>=0.3.0",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "playwright>=1.58.0",
    "scikit-learn>=1.8.0",
    "xgboost>=2.0",
    "seaborn>=0.13.2",
    "semanticscholar>=0.12.0",
    "statsmodels>=0.14.6",
    "sympy>=1.12",
]

[tool.uv.sources]
ml-switching-reg = { path = "../ml-switching-reg", editable = true }
